[gd_scene load_steps=8 format=2]

[ext_resource path="res://Environment/Effects/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Explosive_1_Moser.wav" type="AudioStream" id=2]
[ext_resource path="res://Environment/Effects/ExplosionParticles.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -0.037, 0 )
initial_velocity = 894.22
initial_velocity_random = 0.54
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
linear_accel_random = 0.46
linear_accel_curve = SubResource( 4 )
damping = 500.0
scale = 39.18
scale_random = 0.5
color = Color( 0.839216, 0.839216, 0.839216, 1 )

[node name="Explosion" type="Node2D"]
script = ExtResource( 1 )

[node name="Explosionsprite" type="AnimatedSprite" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 2.02
one_shot = true
autostart = true

[node name="OuterCollide" type="Area2D" parent="."]

[node name="OuterCollide" type="CollisionShape2D" parent="OuterCollide"]
scale = Vector2( 60, 60 )
shape = SubResource( 2 )

[node name="ExplosionDamageTimer" type="Timer" parent="."]
wait_time = 0.521
one_shot = true
autostart = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="Particles" type="Particles2D" parent="."]
emitting = false
amount = 22
lifetime = 1.51
one_shot = true
speed_scale = 1.04
explosiveness = 1.0
randomness = 0.85
visibility_rect = Rect2( -90, -100, 200, 200 )
draw_order = 1
process_material = SubResource( 5 )
script = ExtResource( 3 )
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="OuterCollide" to="." method="_on_OuterCollide_body_entered"]
[connection signal="timeout" from="ExplosionDamageTimer" to="." method="_on_ExplosionDamageTimer_timeout"]
